# parking_searcher

./: Cargo.toml  Makefile  README.md  diesel.toml  go.mod  go.sum
internal/models/: card.go  history.go  park.go  spot.go  user.go
internal/storage/: card_strage.go  db.go  history_storage.go  park_storage.go  spot_storage.go  user_storage.go
migrations/: 000001_parks.down.sql  000001_parks.up.sql  000002_users.up.sql  000003_history.up.sql  000004_cards.up.sql  000005_spots.down.sql  000005_spots.up.sql
migrations/2025-02-16-141249_create_parks/: down.sql  up.sql
migrations/2025-02-16-142154_create_cards_table/: down.sql  up.sql
migrations/2025-02-16-142154_create_history_table/: down.sql  up.sql
migrations/2025-02-16-142154_create_spots_table/: down.sql  up.sql
migrations/2025-02-16-142154_create_users_table/: up.sql
pkg/config/: config.go
src/: main  main.rs  schema.rs
src/api/: park.rs
src/infrastructure/repositories/: park_repo.rs
src/models/: mod.rs  park.rs
