[package]
name = "parking_searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1", features = ["postgres", "uuid", "r2d2", "chrono"] }
dotenvy = "0.15"
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
hyper = "1.0"
hyper-util = { version = "0.1", features = ["server", "tokio"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
